--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/icons/icon-96x96.png">
   <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
+  <meta name="theme-color" content="#FFE1c4">
 </head>
 <body class="grey lighten-4">
   <nav class="z-depth-0">
@@ -30,6 +31,7 @@
     </li>
   </ul>
   <div class="recipes container grey-text text-darken-1">
+    <h6 class="center">Ninja Recipes</h6>
     <div class="card-panel recipe white row">
       <img src="/img/dish.png" alt="recipe thumb">
       <div class="recipe-details">
